slurm-7757.out
/data/charlie/app/anaconda3/envs/gb_network/bin/python
Python 3.6.15
working on EnergyData_Network.System__n14y2_acetyl.Replica__rep1.Frame__002
Traceback (most recent call last):
  File "flowNetwork/Compute_GB_Betweenness_Frame.py", line 1, in <module>
    from __init__ import *
  File "/data/charlie/wes_code_clean_up/flowNetwork/flowNetwork/__init__.py", line 56
    import .functions.correlation_data_utilities as corr_utils
           ^
SyntaxError: invalid syntax
working on EnergyData_Network.System__n14y2_acetyl.Replica__rep1.Frame__001
Traceback (most recent call last):
  File "flowNetwork/Compute_GB_Betweenness_Frame.py", line 1, in <module>
    from __init__ import *
  File "/data/charlie/wes_code_clean_up/flowNetwork/flowNetwork/__init__.py", line 56
    import .functions.correlation_data_utilities as corr_utils
           ^
SyntaxError: invalid syntax
working on EnergyData_Network.System__n14y2_acetyl.Replica__rep1.Frame__003
Traceback (most recent call last):
  File "flowNetwork/Compute_GB_Betweenness_Frame.py", line 1, in <module>
    from __init__ import *
  File "/data/charlie/wes_code_clean_up/flowNetwork/flowNetwork/__init__.py", line 56
    import .functions.correlation_data_utilities as corr_utils
           ^
SyntaxError: invalid syntax
working on EnergyData_Network.System__wt2_standard.Replica__rep1.Frame__001
Traceback (most recent call last):
  File "flowNetwork/Compute_GB_Betweenness_Frame.py", line 1, in <module>
    from __init__ import *
  File "/data/charlie/wes_code_clean_up/flowNetwork/flowNetwork/__init__.py", line 56
    import .functions.correlation_data_utilities as corr_utils
           ^
SyntaxError: invalid syntax
working on EnergyData_Network.System__wt2_standard.Replica__rep1.Frame__000
Traceback (most recent call last):
  File "flowNetwork/Compute_GB_Betweenness_Frame.py", line 1, in <module>
    from __init__ import *
  File "/data/charlie/wes_code_clean_up/flowNetwork/flowNetwork/__init__.py", line 56
    import .functions.correlation_data_utilities as corr_utils
           ^
SyntaxError: invalid syntax
working on EnergyData_Network.System__wt2_standard.Replica__rep1.Frame__002
Traceback (most recent call last):
  File "flowNetwork/Compute_GB_Betweenness_Frame.py", line 1, in <module>
    from __init__ import *
  File "/data/charlie/wes_code_clean_up/flowNetwork/flowNetwork/__init__.py", line 56
    import .functions.correlation_data_utilities as corr_utils
           ^
SyntaxError: invalid syntax
working on EnergyData_Network.System__n14y2_acetyl.Replica__rep1.Frame__000
Traceback (most recent call last):
  File "flowNetwork/Compute_GB_Betweenness_Frame.py", line 1, in <module>
    from __init__ import *
  File "/data/charlie/wes_code_clean_up/flowNetwork/flowNetwork/__init__.py", line 56
    import .functions.correlation_data_utilities as corr_utils
           ^
SyntaxError: invalid syntax
working on EnergyData_Network.System__wt2_standard.Replica__rep1.Frame__003
Traceback (most recent call last):
  File "flowNetwork/Compute_GB_Betweenness_Frame.py", line 1, in <module>
    from __init__ import *
  File "/data/charlie/wes_code_clean_up/flowNetwork/flowNetwork/__init__.py", line 56
    import .functions.correlation_data_utilities as corr_utils
           ^
SyntaxError: invalid syntax
